<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="33dp"
        android:layout_marginBottom="462dp"
        android:layout_marginEnd="77dp"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="77dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="16dp"
        android:text="@string/please_enter_your_details_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:layout_marginBottom="370dp"
        android:layout_marginEnd="297dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="297dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/name_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="249dp"
        android:layout_height="40dp"
        android:layout_marginBottom="371dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_marginBottom="307dp"
        android:layout_marginEnd="298dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="298dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="170dp"
        android:text="@string/emailid_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="249dp"
        android:layout_height="38dp"
        android:layout_marginBottom="307dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="78dp"
        android:layout_height="52dp"
        android:layout_marginBottom="209dp"
        android:layout_marginEnd="290dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="290dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        android:text="@string/phone_number_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="238dp"
        android:layout_height="44dp"
        android:layout_marginBottom="215dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/button"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:layout_marginBottom="57dp"
        android:layout_marginEnd="109dp"
        android:layout_marginLeft="147dp"
        android:layout_marginRight="109dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="400dp"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>